- 
    Type:
Bug
 - 
    Resolution: Fixed
 - 
    Priority:
Major - P3
 - 
    Affects Version/s: None
 - 
    Component/s: None
 
- 
        Fully Compatible
 - 
        ALL
 - 
        v4.0
 - 
        Storage Engines 2018-07-30
 - 
        None
 
- 
        None
 - 
        None
 - 
        None
 - 
        None
 - 
        None
 - 
        None
 
Compact command on mobile fails with error code: 59, with message "no such command: 'compact'", as opposed to the proper error code: CommandNotSupported.
Example code when run on storage to generate the error:
db.runCommand({compact: "coll"});
- is related to
 - 
                    
SERVER-33998 Remove the parallelCollectionScan command
-         
 - Closed
 
 -         
 
- related to
 - 
                    
SERVER-43507 Complete TODO listed in SERVER-36055
-         
 - Closed
 
 -         
 - 
                    
SERVER-44690 Complete TODO listed in SERVER-36055
-         
 - Closed
 
 -