SERVER-36055 Return a proper error for unsupported compact on mobile